// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty table if no sources are provided 1`] = `
<div
  className="table-responsive"
>
  <table
    className="sources-table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Indicator
        </th>
        <th>
          Updated On
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`renders correctly when the sources are updated 1`] = `
.c0 {
  width: 30%;
}

<div>
  <div
    class="table-responsive"
  >
    <table
      class="sources-table table table-sm table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
            Indicator
          </th>
          <th>
            Updated On
          </th>
          <th>
            Actions
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="sources-table-row"
        >
          <td>
            Common Reporting Standard
            <span
              class="text-uppercase"
            >
               (crs)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td
            class="c0"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-metadata-button"
                type="button"
              >
                Metadata
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-dataset-button"
                type="button"
              >
                Datasets
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-history-button"
                type="button"
              >
                Versions
              </button>
            </div>
          </td>
        </tr>
        <tr
          data-testid="sources-table-row"
        >
          <td>
            World Bank Indicators
            <span
              class="text-uppercase"
            >
               (wdi)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td
            class="c0"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-metadata-button"
                type="button"
              >
                Metadata
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-dataset-button"
                type="button"
              >
                Datasets
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-history-button"
                type="button"
              >
                Versions
              </button>
            </div>
          </td>
        </tr>
        <tr
          data-testid="sources-table-row"
        >
          <td>
            Official Development Assistance
            <span
              class="text-uppercase"
            >
               (DAC1)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td
            class="c0"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-metadata-button"
                type="button"
              >
                Metadata
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-dataset-button"
                type="button"
              >
                Datasets
              </button>
              <button
                class="btn btn-dark btn-sm"
                data-testid="sources-table-history-button"
                type="button"
              >
                Versions
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders correctly with default props 1`] = `
.c0 {
  width: 30%;
}

<div
  className="table-responsive"
>
  <table
    className="sources-table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Indicator
        </th>
        <th>
          Updated On
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-testid="sources-table-row"
      >
        <td>
          Common Reporting Standard
          <span
            className="text-uppercase"
          >
             (crs)
          </span>
        </td>
        <td>
          Sun Aug 19 2018
        </td>
        <td
          className="c0"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-metadata-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Metadata
            </button>
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-dataset-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Datasets
            </button>
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-history-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Versions
            </button>
          </div>
        </td>
      </tr>
      <tr
        data-testid="sources-table-row"
      >
        <td>
          World Bank Indicators
          <span
            className="text-uppercase"
          >
             (wdi)
          </span>
        </td>
        <td>
          Sun Aug 19 2018
        </td>
        <td
          className="c0"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-metadata-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Metadata
            </button>
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-dataset-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Datasets
            </button>
            <button
              className="btn btn-dark btn-sm"
              data-testid="sources-table-history-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Versions
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
